<resources>
    <string name="app_name">ShadesOfRed</string>
<<<<<<< HEAD
    <string name="moto">Donate Blood</string>
    <string name="moto1">at</string>
    <string name="donation_center">Donation Center</string>
    <string name="submit">Submit</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
=======
    <string-array name="bloodgrp">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
>>>>>>> 04d5c22ffbf43219e6eb64f5be74d16a41fc5be7
</resources>