<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="false">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_margin="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="286dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/hospital" />

        <TextView
            android:textColor="#CC1D1D"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:text="@string/moto"
            android:textSize="36sp"/>
        <TextView

            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:text="@string/moto1"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:text="@string/donation_center"
            android:textSize="30sp"/>

        <EditText
            android:layout_marginStart="40dp"
            android:id="@+id/editTextDate"
            android:layout_width="324dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:gravity="center"
            android:inputType="date"
            android:hint="@string/date"
            />

        <EditText
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/editTextTime2"
            android:layout_width="324dp"
            android:layout_height="50dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:gravity="center"
            android:inputType="time"
            android:hint="@string/time"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            />

        <Button
            android:layout_marginStart="90dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_marginTop="40dp"
            android:id="@+id/button"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:text="@string/submit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>